--- a/Ytdlp.Web/Dockerfile
+++ b/Ytdlp.Web/Dockerfile
@@ -1,7 +1,7 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /
 VOLUME /data
-EXPOSE 80
+EXPOSE 8080
 
 #############
 ##  BUILD  ##
@@ -10,15 +10,13 @@ EXPOSE 80
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["yt-dlp-web/yt-dlp-web.csproj", "yt-dlp-web/"]
-RUN dotnet restore "yt-dlp-web/yt-dlp-web.csproj"
 COPY . .
-WORKDIR "/src/yt-dlp-web"
-RUN dotnet build "yt-dlp-web.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet restore "./Ytdlp.Web.csproj"
+RUN dotnet build "Ytdlp.Web.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "yt-dlp-web.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Ytdlp.Web.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 ##############
 ##  RUNTIME ##
@@ -35,6 +33,6 @@ WORKDIR /app
 COPY --from=publish /app/publish .
 
 # Configure & run
-USER $APP_UID
-ENV ASPNETCORE_URLS=http://+:80
+ENV ASPNETCORE_URLS=http://+:8080
+ENV DOTNET_RUNNING_IN_CONTAINER=true
 ENTRYPOINT ["dotnet", "Ytdlp.Web.dll"]
